buildscript {
    ext {
        jena_version = '3.16.0'
        milton_version = '2.8.0.1'
        mockitoVersion = '3.2.4'
        jacksonVersion = '2.10.1' // check what version is used by Jena
    }
}

plugins {
    id 'java'
    id 'io.franzbecker.gradle-lombok' version '3.3.0'
    id 'application'
    id 'jacoco'
//    id  'com.github.spotbugs' version '1.6.10'
    id "org.owasp.dependencycheck" version "5.2.2"
}

group 'io.fairspace'
version '1.0-SNAPSHOT'

compileJava {
    sourceCompatibility = 14
    targetCompatibility = 14
}

application {
    mainClassName = "io.fairspace.saturn.App"
    applicationDefaultJvmArgs = ['-XX:+ShowCodeDetailsInExceptionMessages']
}

repositories {
    mavenCentral()

    maven {
        url "https://dl.bintray.com/milton/Milton"
    }

    maven { url "https://repo.thehyve.nl/content/repositories/fairspace-releases/" }
    maven { url "https://repo.thehyve.nl/content/repositories/fairspace-snapshots/" }
}

dependencies {
//    implementation fileTree(dir: 'libs', include: '*.jar') // jena-fuseki-server-*.jar jena-text-es-*.jar
    implementation "org.apache.jena:jena-fuseki-main:${jena_version}"
    implementation "org.apache.jena:jena-text:${jena_version}"
    implementation "org.apache.jena:jena-text-es:${jena_version}"
    implementation('org.elasticsearch.client:transport:6.4.2')
    implementation "io.milton:milton-server-ce:${milton_version}"
    implementation 'com.nimbusds:nimbus-jose-jwt:7.1'
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
    implementation "com.sparkjava:spark-core:2.9.0"
    implementation 'com.pivovarit:throwing-function:1.5.0'
    implementation 'com.google.guava:guava:27.1-jre'
    implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.11.1'
    implementation('com.io-informatics.oss:jackson-jsonld:0.1.1') {
        exclude group: 'com.github.jsonld-java'
    }
    implementation('org.bouncycastle:bcprov-jdk15on:1.64')
    implementation 'com.nimbusds:nimbus-jose-jwt:7.1'

    implementation 'net.logstash.log4j:jsonevent-layout:1.7'

    implementation 'org.eclipse.jetty:jetty-proxy:9.4.15.v20190215'

    implementation 'org.keycloak:keycloak-jetty94-adapter:9.0.0'
    implementation 'org.keycloak:keycloak-admin-client:9.0.0'

    testImplementation "junit:junit:4.12"
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'

//    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.8.0'

    constraints {
//        implementation('org.elasticsearch.client:transport:6.8.2') {
//            because 'previous versions have security vulnerabilities'
//        }
//        implementation('com.fasterxml.jackson.core:jackson-databind:2.9.10.1') {
//            because 'previous versions have security vulnerabilities'
//        }
    }
}

jacocoTestReport {
    reports {
        xml.enabled false
        csv.enabled true
    }
}

dependencyCheck {
    failBuildOnCVSS=9
}

// Plugin disabled for Java 13 - not compatible
//apply plugin: 'com.github.spotbugs'
//
//spotbugs {
//  toolVersion = '3.1.12'
//  effort = "max"
//  reportLevel = "low"
//  ignoreFailures = true
//}

//tasks.withType(com.github.spotbugs.SpotBugsTask) {
//    reports {
//        xml.enabled = false
//        html.enabled = true
//    }
//}
